UI: Improve link visibility by adding a transparent underline (Fix #24877)

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -1456,24 +1456,23 @@ td.pointer {
     color: hsl(200deg 99% 60%);
 }
 
-
 /* UI redesign: blue links style: https://github.com/zulip/zulip/issues/24877 */
 .dark_background a,
 .dark_background a:link,
 .dark_background a:visited {
-    color:hsla(200, 100%, 50%, 1);
-  text-decoration-color: hsla(200, 100%, 50%, 0.3);
+    color: hsl(200deg 100% 50% / 100%);
+    text-decoration-color: hsl(200deg 100% 50% / 30%);
 }
+
 .dark_background a:hover {
-    color:hsla(200, 100%, 66%, 1);
-  text-decoration-color: hsla(200, 100%, 66%, 0.7);
-}
-.dark_background a:active{
-  color:hsla(200, 100%, 55%, 1);
-  text-decoration-color: hsla(200, 100%, 50%, 0.7);
+    color: hsl(200deg 100% 66% / 100%);
+    text-decoration-color: hsl(200deg 100% 66% / 70%);
 }
 
-
+.dark_background a:active {
+    color: hsl(200deg 100% 55% / 100%);
+    text-decoration-color: hsl(200deg 100% 50% / 70%);
+}
 
 .small {
     font-size: 80%;
@@ -1551,22 +1550,20 @@ div.focused_table {
 .message_content a,
 .message_content a:link,
 .message_content a:visited {
-  color: hsla(200, 100%, 36%, 1);
-  text-decoration-color: hsla(200, 100%, 36%, 0.3); 
-  text-decoration: underline;
-  text-underline-offset: 2px;
+    color: hsl(200deg 100% 36% / 100%);
+    text-decoration: underline hsl(200deg 100% 36% / 30%) solid;
+    text-underline-offset: 2px;
 }
 
 .message_content a:hover {
-  color: hsla(200, 100%, 33%, 1);
-  text-decoration-color: hsla(200, 100%, 33%, 0.7);
+    color: hsl(200deg 100% 33% / 100%);
+    text-decoration-color: hsl(200deg 100% 33% / 70%);
 }
 
 .message_content a:active {
-  color: hsla(200, 100%, 30%, 1);
-  text-decoration-color: hsla(200, 100%, 30%, 1);
+    color: hsl(200deg 100% 30% / 100%);
+    text-decoration-color: hsl(200deg 100% 30% / 100%);
 }
-
 
 .rtl {
     direction: rtl;
